Adding support for thrift 0.7
Re-Added: Update to utilize the new -out parameter added to thrift compiler patch (THRIFT-1069)
Also added caution to README.

--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+CAUTION: Plugin version 0.1.11 requires thrift compiler version 0.7.0 or newer.
+
+You must use plugin version 0.1.10 for older thrift versions.
+
 ***************************
 *** Maven Thrift Plugin ***
 ***************************
