--- a/README
+++ b/README
@@ -37,8 +37,16 @@ A minimal configuration to invoke this plugin would be:
                 </configuration>
                 <executions>
                     <execution>
+                        <id>thrift-sources</id>
+                        <phase>generate-sources</phase>
                         <goals>
                             <goal>compile</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>thrift-test-sources</id>
+                        <phase>generate-test-sources</phase>
+                        <goals>
                             <goal>testCompile</goal>
                         </goals>
                     </execution>
