Updated readme with link to ASF.

--- a/README
+++ b/README
@@ -1,3 +1,14 @@
+***************************
+*** ONGOING MAINTENANCE ***
+***************************
+
+PLEASE NOTE: THIS CODE HAS BEEN CONTRIBUTED BACK TO ASF.
+
+https://issues.apache.org/jira/browse/THRIFT-1536
+
+Any furture work I do on this plugin, will be as patches submitted to their version.
+I am not planning to perform any further maintenance on this fork (or accept any patches / pull requests).
+
 ***********************
 *** VERSION WARNING ***
 ***********************
